большой объём правок многопоточных багов